--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.1",
-    "webpack": "^4.20.2",
+    "webpack": "^3.12.0",
     "webpack-cli": "^3.1.2"
   }
 }
